2005-11-29  Adam Schreiber  <sadam@clemson.edu>
    * plugins/gedit/seahorse-gedit.c: Fixed freeing uninitialized
    pointer (Bug #322509)

2005-11-12  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key.h:
    * libseahorse/seahorse-ssh-source.c:
    * libseahorse/seahorse-ssh-source.h:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-ssh-key-properties.glade: Can now change passphrases
    for SSH keys.
    
2005-11-11  Adam Schreiber <sadam@clemson.edu>

    * libseahorse/seahorse-keyset.c:
    * libseahorse/seahorse-keyset.h:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-recipients.c:
    * libseahorse/seahorse-signer.c: Remove invalid keys from default
    key widget (Bug #321099)

2005-11-10  Adam Schreiber <sadam@clemson.edu>

    * plugins/nautilus/seahorse-pgp-preferences.c: Fixed Assertion in load
    due to themable icons

2005-11-07  Adam Schreiber <sadam@clemson.edu>
 
    * src/seahorse-key-properties.c:
    * src/seahorse-key-properties.glade: Patch for primary and first
    and last buttons (Bug #317537)

2005-11-05  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-prompt.c:
    * daemon/seahorse-daemon.c:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-passphrase.c:
    * libseahorse/seahorse-passphrase.glade: (removed)
    * libseahorse/seahorse-secure-entry.c:
    * src/main.c: Unify passphrase prompting across all
    the seahorse processes.
    * configure.in:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h:
    * libseahorse/seahorse-passphrase.c:
    * libseahorse/seahorse-ssh-askpass.c: (added)
    * libseahorse/seahorse-ssh-source.c:
    * libseahorse/seahorse-ssh-source.h:
    * pixmaps/Makefile.am:
    * pixmaps/seahorse-key-ssh-large.png: (added)
    * pixmaps/seahorse-parts.xcf: (added)
    * src/Makefile.am: