@@ -1,3 +1,7 @@
+2005-12-02  Adam Schreiber  <sadam@clemson.edu>
+    * libseahorse/seahorse-context.c: Fixed bug with not finding    
+    imported keys. (Bug #313270)
+
 2005-11-29  Adam Schreiber  <sadam@clemson.edu>
     * plugins/gedit/seahorse-gedit.c: Fixed freeing uninitialized
     pointer (Bug #322509)
